# app/dashboard/handler.go
@@ -1,0 +1,53 @@
+package dashboard
+
+import (
+	"github.com/jihanlugas/sistem-percetakan/jwt"
+	"github.com/jihanlugas/sistem-percetakan/response"
+	"github.com/labstack/echo/v4"
+	"net/http"
+)
+
+type Handler struct {
+	usecase Usecase
+}
+
+func NewHandler(usecase Usecase) Handler {
+	return Handler{
+		usecase: usecase,
+	}
+}
+
+// GetDashboardById
+// @Tags Order
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID"
+// @Query preloads query string false "preloads"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /dashboard/{id} [get]
+func (h Handler) GetDashboardById(c echo.Context) error {
+	var err error
+
+	loginUser, err := jwt.GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
+	}
+
+	id := c.Param("id")
+	if id == "" {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
+	}
+
+	if jwt.IsSaveCompanyIDOR(loginUser, id) {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerIDOR, err, nil).SendJSON(c)
+	}
+
+	dashboard, err := h.usecase.GetDashboard(loginUser, id)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, response.SuccessHandler, dashboard).SendJSON(c)
+}
